fix overflow to body, fix searc input

--- a/client/src/components/main/style.less
+++ b/client/src/components/main/style.less
@@ -8,7 +8,7 @@
 
     max-width: 350px;
     overflow-y: auto;
-    max-height: 1450px;
+    max-height: 1480px;
   }
   .sidebar::-webkit-scrollbar {
     width: 0.5em;
