--- a/client/src/components/route/style.less
+++ b/client/src/components/route/style.less
@@ -41,6 +41,9 @@
             border-right: none;
           }
         }
+        .map__navigation__step_item-active {
+          text-decoration: underline;
+        }
       }
     }
   }
@@ -70,6 +73,11 @@
 .route__btn {
   text-align: center;
   font-size: 2.5rem;
+  h1 {
+    font-size: 30px;
+    margin: 20px 0px;
+    font-style: italic;
+  }
   a {
     display: inline-block;
     text-align: center;
