--- a/client/src/components/search/style.less
+++ b/client/src/components/search/style.less
@@ -3,34 +3,40 @@
   text-align: center;
   .search__input {
     display: inline-block;
-    width: 70%;
+    width: 60%;
     .angucomplete-dropdown {
+      position: absolute;
+      width: 60%;
+      padding: 10px 15px;
       background-color: green;
+      border-radius: 20px;
+      text-align: left;
       font-size: 2.7rem;
+      font-weight: bold;
       color: #fff;
+      .angucomplete-row {
+        border-bottom: 1px solid white;
+      }
     }
     .form-control {
+      padding-left: 25px;
       height: 50px;
-      text-align: center;
-      font-size: 2.7rem;
-      color: green;
-      font-weight: bold;
-      font-style: italic;
       border: 2px solid green;
       border-radius: 20px;
+      font-size: 2.7rem;
+      font-style: italic;
     }
-  }
-}
-
-#search_value {
-  color: transparent;
-  text-shadow: 0 0 0 green;
-  text-align: center;
-  &:focus {
-    outline: none;
+    .form-control:focus {
+      color: green;
+      border: 3px solid green;
+      box-shadow: none;
+    }
   }
 }
 
 #search_value::-webkit-input-placeholder {
   color: green !important;
+}
+#search_value:focus::-webkit-input-placeholder {
+  color: silver !important;
 }
